Gave page header z-index > 0 to avoid that `position: relative` on a subsequent object puts it above the header. Choose z-index = 9999 to signal that it should be above everything.

--- a/kntnt-css-framework/page-layout.css
+++ b/kntnt-css-framework/page-layout.css
@@ -43,6 +43,7 @@ body > * > * > * {
 body > header {
   --topbar-height: calc(var(--topbar-font-size) + 2 * var(--topbar-padding-vertical));
   --header-height: calc(var(--header-content-height-max) + 2 * var(--header-padding-vertical));
+  z-index: 9999;
 }
 
 body > header > * {
